@@ -13,12 +13,15 @@ import org.springframework.security.core.userdetails.UsernameNotFoundException;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
 import org.springframework.web.multipart.MultipartFile;
+import software.amazon.awssdk.core.sync.RequestBody;
+import software.amazon.awssdk.services.s3.S3Client;
+import software.amazon.awssdk.services.s3.model.*;
 
-import java.io.File;
 import java.io.IOException;
 import java.util.HashMap;
 import java.util.List;
 import java.util.Map;
+import java.util.stream.Collectors;
 
 
 @Service
@@ -26,13 +29,14 @@ import java.util.Map;
 @RequiredArgsConstructor
 public class DiaryBoardService {
     private final DiaryBoardMapper mapper;
+    final S3Client s3Client;
     private final MemberMapper memberMapper;
 
     @Value("${aws.s3.bucket.name}")
-    String bucketName;
+    private String bucketName;
 
     @Value("${image.src.prefix}")
-    String srcPrefix;
+    private String srcPrefix;
 
     public void add(DiaryBoard diaryBoard, MultipartFile[] files, Authentication authentication) throws IOException {
         String nickname = diaryBoard.getNickname();
@@ -56,18 +60,18 @@ public class DiaryBoardService {
                 mapper.insertFileName(diaryBoard.getId(), file.getOriginalFilename());
                 //실제 파일 저장
                 // 부모 디렉토리만들기
-                String dir = STR."User:/parjaewook/temp/prj3/\{diaryBoard.getId()}";
-                File dirFile = new File(dir);
-                if (!dirFile.exists()) {
-                    dirFile.mkdirs();
-                }
+                String key = String.format("prj3/%d/%s", diaryBoard.getId(), file.getOriginalFilename());
+                PutObjectRequest objectRequest = PutObjectRequest.builder()
+                        .bucket(bucketName)
+                        .key(key)
+                        .acl(ObjectCannedACL.PUBLIC_READ)
+                        .build();
 
-                // 파일 경로
+                s3Client.putObject(objectRequest,
+                        RequestBody.fromInputStream(file.getInputStream(), file.getSize()));
 
-                String path = STR."/" + file.getOriginalFilename();
-                File destination = new File(path);
-                file.transferTo(destination);
             }
+
         }
 
 
@@ -117,15 +121,10 @@ public class DiaryBoardService {
     public void remove(Integer id) {
         List<String> fileNames = mapper.selectFileNameByDiaryId(id);
 
-        String dir = STR."User:/parkjaewook/temp/prj3/\{id}";
         for (String fileName : fileNames) {
-            File file = new File(dir + fileName);
-            file.delete();
-        }
-
-        File dirFile = new File(dir);
-        if (dirFile.exists()) {
-            dirFile.delete();
+            String key = STR."prj3/\{id}/\{fileName}";
+            DeleteObjectRequest objectRequest = DeleteObjectRequest.builder().bucket(bucketName).key(key).build();
+            s3Client.deleteObject(objectRequest);
         }
 
         //diaryBoardFile
@@ -138,10 +137,13 @@ public class DiaryBoardService {
     public void edit(DiaryBoard diaryBoard, List<String> removeFileList, MultipartFile[] addFileList) throws IOException {
         if (removeFileList != null && removeFileList.size() > 0) {
             for (String fileName : removeFileList) {
-                // disk의 파일 삭제
-                String path = STR."User:/parkjaewook/temp/prj3/\{diaryBoard.getId()}/\{fileName}";
-                File file = new File(path);
-                file.delete();
+                String key = STR."prj3/\{diaryBoard.getId()}/\{fileName}";
+                DeleteObjectRequest objectRequest = DeleteObjectRequest.builder()
+                        .bucket(bucketName)
+                        .key(key)
+                        .build();
+                s3Client.deleteObject(objectRequest);
+
                 // db records 삭제
                 mapper.deleteFileByDiaryIdAndName(diaryBoard.getId(), fileName);
             }
@@ -150,20 +152,18 @@ public class DiaryBoardService {
             List<String> fileNameList = mapper.selectFileNameByDiaryId(diaryBoard.getId());
             for (MultipartFile file : addFileList) {
                 String fileName = file.getOriginalFilename();
+
                 if (fileNameList.contains(fileName)) {
+
                     mapper.insertFileName(diaryBoard.getId(), fileName);
                 }
                 //disk 에 쓰기
-                File dir = new File(STR."User:/parkjaewook/\{diaryBoard.getId()}");
-                if (!dir.exists()) {
-                    dir.mkdirs();
-                }
-                String path = STR."User:/parkjaewook/temp/prj3/\{diaryBoard.getId()}/\{fileName}";
-                File destination = new File(path);
-                file.transferTo(destination);
+                String key = STR."prj3/\{diaryBoard.getId()}/\{fileName}";
+                PutObjectRequest objectRequest = PutObjectRequest.builder().bucket(bucketName).key(key).acl(ObjectCannedACL.PUBLIC_READ).build();
+
+                s3Client.putObject(objectRequest, RequestBody.fromInputStream(file.getInputStream(), file.getSize()));
             }
         }
-
         mapper.update(diaryBoard);
     }
 
@@ -184,12 +184,19 @@ public class DiaryBoardService {
     }
 
     public DiaryBoard get(Integer id) {
+        String keyPrefix = String.format("prj3/%d/", id);
+        ListObjectsV2Request listObjectsV2Request = ListObjectsV2Request.builder().bucket(bucketName)
+                .prefix(keyPrefix).build();
+        ListObjectsV2Response listResponse = s3Client.listObjectsV2(listObjectsV2Request);
+        for (S3Object object : listResponse.contents()) {
+            System.out.println("object.key() = " + object.key());
+        }
+
 
         DiaryBoard diaryBoard = mapper.selectById(id);
         List<String> fileNames = mapper.selectFileNameByDiaryId(id);
         List<DiaryBoardFile> files = fileNames.stream()
-                .map(name -> new DiaryBoardFile(name, STR."http://localhost:5173/\{id}/\{name}"))
-                .toList();
+                .map(name -> new DiaryBoardFile(name, srcPrefix + id + "/" + name)).collect(Collectors.toList());
 
         diaryBoard.setFileList(files);
 
